Associate elements with the active form
Created attachment 62151 [details] Patch
Any help figuring out what test case this fixes would be appreciated. I don't really want to land this until we can figure out what it's doing.
Created attachment 62154 [details] Patch
Comment on attachment 62154 [details] Patch Turns out a spec bug was masking our ability to test this code.
Comment on attachment 62154 [details] Patch I can't believe this huge hack exists to pass only one test. :(
Comment on attachment 62154 [details] Patch Clearing flags on attachment: 62154 Committed r63815: <http://trac.webkit.org/changeset/63815>
All reviewed patches have been landed. Closing bug.